deployment/id_access_page/k8s/deployment_example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idaccess-deployment
  labels:
    app: idaccess
  namespace: <YOUR-NAMESPACE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idaccess
  template:
    metadata:
      labels:
        app: idaccess
        external-ingress: enabled
        egress: enabled
    spec:
      containers:
        - name: idaccess
          image: <YOUR-IMAGE>
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 50Mi
            requests:
              cpu: 200m
              memory: 50Mi
          ports:
            - containerPort: 80
