deployment/id_access_page/k8s/service_example.yaml
apiVersion: v1
kind: Service
metadata:
  name: idaccess-service
  namespace: <YOUR-NAMESPACE>
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: idaccess
  type: ClusterIP
