deployment/id_access_page/k8s/ingress_example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-live
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
  name: idaccess-ingress
  namespace: <YOUR-NAMESPACE>
spec:
  rules:
    - host: <YOUR-HOSTNAME>
      http:
        paths:
          - backend:
              serviceName: idaccess-service
              servicePort: 80
            path: /
  tls:
    - hosts:
        - <YOUR-HOSTNAME>
      secretName: <YOUR-SECRETNAME>
